--- a/SURVEY_FORM_Task 1/style.css
+++ b/SURVEY_FORM_Task 1/style.css
@@ -1,41 +1,97 @@
+:root{
+    --theme: #262A33;
+}
+
 body {
-    font-family: 'Helvetica', sans-serif;
-    background-color: #f0f0f0;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .container {
-    background-color: #ffffff;
-    border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-  }
-  
-  .page {
-    display: none;
-  }
-  
-  .page.active {
+    background-color: var(--theme);
+    font-family: Verdana;
+    text-align: center;
+}
+
+/* Styling the Form (Color, Padding, Shadow) */
+form {
+    background-color: #fff;
+    max-width: 700px;
+    margin: 50px auto;
+    padding: 30px 20px;
+    box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.5);
+}
+
+/* Styling form-control Class */
+.form-control {
+    text-align: left;
+    margin-bottom: 25px;
+}
+
+/* Styling form-control Label */
+.form-control label {
     display: block;
-  }
-  
-  h1 {
-    color: #333333;
-    margin-top: 0;
-  }
-  
-  .input-field {
-    width: 100%;
+    margin-bottom: 10px;
+}
+
+/* Styling form-control input,
+select, textarea */
+.form-control input,
+.form-control select,
+.form-control textarea {
+    border: 2px solid #000000;
+    border-radius: 2px;
+    font-family: inherit;
     padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-  
-  .next-button,
-  .prev-button,
-  .submit-button {
-    margin-top: 10px;
-  }
-  
+    display: block;
+    width: 100%;
+    outline: none;
+    max-width: 95%;
+    max-height: 300px;
+}
+
+input:focus, textarea:focus{
+    border: 3px solid black;
+}
+
+/* Styling form-control Radio
+button and Checkbox */
+.form-control input[type="radio"],
+.form-control input[type="checkbox"] {
+    display: inline-block;
+    width: auto;
+}
+
+#role {
+    display: inline-block;
+    width: auto;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+
+.wrapper {
+  background-color: #fff;
+  max-width: 700px;
+  padding: 30px 20px;
+  box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.5);
+  text-align: center;
+}
+
+
+/* Styling Button */
+button {
+    background-color: var(--theme);
+    color: white;
+    border: 1px solid #777777;
+    border-radius: 7px;
+    font-family: inherit;
+    font-size: 21px;
+    display: block;
+    width: 50%;
+    margin-top: 767px;
+    margin-bottom: 20px;
+    padding: 5px;
+    position: absolute;
+    top: 50%;
+    background-color: #000000;
+}
+
+
+button:hover, input[type="radio"], input[type="checkbox"]{
+    cursor: pointer;
+}
